added the first blog

--- a/Milestone5/module24/m24-1/practice.html
+++ b/Milestone5/module24/m24-1/practice.html
@@ -36,8 +36,7 @@
  document.getElementById('fruits-title').style.color='red'
  
  vvip**
- javascript er html er mto background-color: ;
- evabe deya jabe na backgroundColor: ; eivabe dite hbe.camel case
+ javascript html er mto na. background-color: ; evabe deya jabe na.backgroundColor: ; eivabe dite hbe.camel case
  
 
 
